<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfa">

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_egyptian_blue"
        android:layout_gravity="top|start"
        android:translationX="-130dp"
        android:translationY="-120dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_egyptian_blue"
        android:layout_gravity="top|start"
        android:translationX="20dp"
        android:translationY="-205dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_indigo_dye"
        android:layout_gravity="bottom|end"
        android:translationX="200dp"
        android:translationY="100dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_indigo_dye"
        android:layout_gravity="bottom|end"
        android:translationX="0dp"
        android:translationY="205dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/email_login_et"
            android:hint="@string/input_email"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:background="@drawable/input_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="-18dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="25dp"/>

        <EditText
            android:id="@+id/password_login_et"
            android:hint="@string/input_password"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:background="@drawable/input_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="-18dp"
            android:drawableStart="@drawable/security_icon"
            android:drawablePadding="25dp"/>

        <ImageButton
            android:id="@+id/login_post_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_container_auth"
            android:src="@drawable/login_arrow_large"
            android:translationX="165dp"
            android:translationY="-90dp"
            android:contentDescription="@string/login_title"/>

        <TextView
            android:id="@+id/forgot_password_tv"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:textColor="#666666"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:translationX="-90dp"
            android:translationY="-50dp"
            android:clickable="true"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/page_register_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/register_title"
            android:layout_marginStart="-145dp"
            android:textColor="#ff520e"
            android:textAllCaps="false"
            android:background="@drawable/button_container_register"/>

    </LinearLayout>
</FrameLayout>
