<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfa">

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_aerospace_orange"
        android:layout_gravity="top|start"
        android:translationX="-130dp"
        android:translationY="-120dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_chili_red"
        android:layout_gravity="top|start"
        android:translationX="20dp"
        android:translationY="-205dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_aerospace_orange"
        android:layout_gravity="bottom|end"
        android:translationX="200dp"
        android:translationY="100dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bubble_chili_red"
        android:layout_gravity="bottom|end"
        android:translationX="0dp"
        android:translationY="205dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/username_et"
            android:hint="@string/input_username"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:background="@drawable/input_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="-18dp"
            android:drawableStart="@drawable/account_icon"
            android:drawablePadding="25dp"/>

        <EditText
            android:id="@+id/email_et"
            android:hint="@string/input_email"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:background="@drawable/input_email_alt"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="-18dp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="25dp"/>

        <EditText
            android:id="@+id/password_et"
            android:hint="@string/input_password"
            android:layout_width="375dp"
            android:layout_height="60dp"
            android:background="@drawable/input_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textStyle="bold"
            android:paddingStart="32dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="-18dp"
            android:drawableStart="@drawable/security_icon"
            android:drawablePadding="25dp"/>

        <ImageButton
            android:id="@+id/loginButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/button_container_auth"
            android:src="@drawable/register_check"
            android:translationX="165dp"
            android:translationY="-120dp"
            android:contentDescription="@string/register_title"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/page_login_btn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="@string/login_title"
            android:layout_marginTop="-390dp"
            android:layout_marginEnd="-142dp"
            android:textColor="#2f3393"
            android:textAllCaps="false"
            android:background="@drawable/button_container_login"/>

    </LinearLayout>
</FrameLayout>
